--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,4 +173,14 @@
     <string name="new_bookmark">Added:</string>
     <string name="remove_bookmark">Removed:</string>
     <string name="textScale">Text scale</string>
+
+    <!-- Preferences -->
+    <string name="pref_notif_interval">notif_interval</string>
+    <string name="pref_save_data">save_data</string>
+    <string name="pref_notifications_settings">notifications_settings</string>
+    <string name="pref_navigation_menu_settings">navigation_menu_settings</string>
+    <string name="pref_more_and_credits">more_and_credits</string>
+    <string name="pref_location_enabled">location_enabled</string>
+    <string name="pref_notif">notif</string>
+    <string name="pref_locale_switcher">locale_switcher</string>
 </resources>
