--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,7 +172,7 @@
     <string name="bookmarks_header">Bookmarks</string>
     <string name="new_bookmark">Added:</string>
     <string name="remove_bookmark">Removed:</string>
-    <string name="textScale">Text scale</string>
+    <string name="text_scale">Text scale</string>
 
     <!-- Preferences -->
     <string name="pref_save_data">save_data</string>
