Revert int array to string array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,4 +181,5 @@
     <string name="pref_location_enabled">location_enabled</string>
     <string name="pref_locale_switcher">locale_switcher</string>
     <string name="pref_start_url">start_url</string>
+    <string name="pref_text_scale">text_scale</string>
 </resources>
